--- a/style.css
+++ b/style.css
@@ -34,3 +34,16 @@ html {
   
   caption {
     padding: 10px;}
+
+  p button { align-items: center;
+  text-align: center;}
+
+
+table { width:100%;
+  border-collapse: collapse;}
+  th td { border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;}
+  th { background-color: #f2f2f2;}
+  td:focus { outline:none;
+              background-color: #e0f7fa;}
